core/networkpolicies/egress-helm-controller.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-helm-controller
  namespace: flux-system
spec:
  selector: app == 'helm-controller'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'notification-controller'
        ports:
          - 9090
