core/networkpolicies/egress-kustomize-controller.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-kustomize-controller
  namespace: flux-system
spec:
  selector: app == 'kustomize-controller'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'notification-controller'
        ports:
          - 9090
