core/networkpolicies/ingress-source-controller.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-source-controller
  namespace: flux-system
spec:
  selector: app == 'source-controller'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'monitoring'
        selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
      destination:
        ports:
          - 8080
